k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hivenews
  labels:
    name: hivenews
    environment: production
